--- a/homework/templates/homework/class.html
+++ b/homework/templates/homework/class.html
@@ -19,10 +19,10 @@
         <td><a href="{% url 'homework:student' s.id %}">{{ forloop.counter }}. {{ s.name }}</a></td>
         <td>
             {% for sk,sv in situation.items %}
-                {% if sv == 0 %}
+                {% if sv.0 == 0 %}
                     <a href="{% url 'homework:thread' sk %}"><img src="{% static 'homework/img/red.png' %}" width="20px" height="20px" /></a>
                 {% else %}
-                    <img src="{% static 'homework/img/green.png' %}" width='20px' height='20px' />
+                    <img src="{% static 'homework/img/green.png' %}" alt="{{ sv.1 }}" width='20px' height='20px' />
                 {% endif %}
             {% endfor %}
         </td>
